AUTOMAKE_OPTIONS = subdir-objects

lib_LTLIBRARIES = libnix.la

libnix_la_SOURCES = IO/EPS.cpp IO/Povray.cpp gp.cpp model.cpp hash.cpp statistics.cpp optimization.cpp Mathematix.cpp testfunctions.cpp tinyxml2.cpp tinyxml.cpp tinystr.cpp tinyxmlparser.cpp tinyxmlerror.cpp
libnix_la_LDFLAGS = -version-info 0:0:0
libnix_la_CXXFLAGS= -g